--- a/index.html
+++ b/index.html
@@ -85,45 +85,50 @@
     </div>
     <h1 id="projects-h1"><span style="font-size: 10px; font-weight: 100;">some </span>Projects</h1>
     <div class="projects-items">
-      <div style="height: 576px;" class="video-container">
-        <video style="float: left;" width="326.4px" height="576px" muted autoplay loop>
-          <source src="./videos/worldtime_vid.mp4">
-          WorldTime Preview Video
-        </video>
-        <div class="video-description">
+      <ul>
+        <li>
+          <video width="326.4px" height="576px" muted autoplay loop>
+            <source src="./videos/worldtime_vid.mp4">
+            WorldTime Preview Video
+          </video>
+        </li>
+        <li>
           <p><a href="https://github.com/AaEsS/world_time_fapp" target="_blank"><b>WorldTime [Dart, Flutter]</b></a> is a mobile app that uses web scraping and API calling to retrieve and show time data of regions from worldtimeapi.org. The app starts by automatically fetching the current time of the user's region. The user can choose from all of the regions presented in a scrollable list, or use an implemented search bar to find their desired one.</p>
-        </div>
-      </div>
-      <div style="height: 324px;" class="video-container">
-        <video style="float: right;" width="576px" height="324px" muted autoplay loop>
-          <source src="./videos/dotdodge_vid.mkv">
-          DotDodge Preview Video
-        </video>
-        <div class="video-description">
-          <p><a href="https://github.com/AaEsS/dtddge-android" target="_blank"><b>DotDodge [C#, Unity]</b></a> is a short game where the player tries to beat it by dodging all homing bullets/missiles. The game gets harder the longer you survive. The player wins when the timer hits zero.</p>
-          <p>Game published <a href="https://aaess.itch.io/dotdodge" target="_blank">here</a></p>
-        </div>
-      </div>
-      <div style="height: 576px;" class="video-container">
-        <video style="float: left;" width="326.4px" height="576px" muted autoplay loop>
-          <source src="./videos/smf_vid.mp4">
-          Save_My_Face Preview Video
-        </video>
-        <div class="video-description">
-          <p><a href="https://github.com/AaEsS/MeasureIT_Game_OtherVersion-Pub" target="_blank"><b>Save My Face [C#, Unity]</b></a> is a personal commercial mobile game about my face controlled by the player. The goal is to "save my face" from the bullets that are shot by a cannon constantly facing the player. There are powerups that can help the player survive longer. At the end, a score of how many bullets survived is shown. A leaderboard and ads are implemented as well.</p>
-          <p>Game published <a href="https://play.google.com/store/apps/details?id=com.AhAm.DodgEM" target="_blank">here</a></p>
-        </div>
-      </div>
-      <div style="height: 324px;" class="video-container">
-        <video style="float: right;" width="576px" height="324px" muted autoplay loop>
-          <source src="./videos/gwa_vid.mkv">
-          Game_Without_Art Preview Video
-        </video>
-        <div class="video-description">
-          <p><a href="https://github.com/AaEsS/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is similar to Save My Face. This one has more powerups and the ability to use more than one at once. Instead of a cannon shooting, each bullet grows and pops to three small ones that act like their parent.</p>
-          <p>Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
-        </div>
-      </div>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <p><a href="https://github.com/AaEsS/dtddge-android" target="_blank"><b>DotDodge [C#, Unity]</b></a> is a short game where the player tries to beat it by dodging all homing bullets/missiles. The game gets harder the longer you survive. The player wins when the timer hits zero. Game published <a href="https://aaess.itch.io/dotdodge" target="_blank">here</a></p>
+        </li>
+        <li>
+          <video width="576px" height="324px" muted autoplay loop>
+            <source src="./videos/dotdodge_vid.mkv">
+            DotDodge Preview Video
+          </video>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <video width="326.4px" height="576px" muted autoplay loop>
+            <source src="./videos/smf_vid.mp4">
+            Save_My_Face Preview Video
+          </video>
+        </li>
+        <li>
+          <p><a href="https://github.com/AaEsS/MeasureIT_Game_OtherVersion-Pub" target="_blank"><b>Save My Face [C#, Unity]</b></a> is a personal commercial mobile game about my face controlled by the player. The goal is to "save my face" from the bullets that are shot by a cannon constantly facing the player. There are powerups that can help the player survive longer. At the end, a score of how many bullets survived is shown. A leaderboard and ads are implemented as well. Game published <a href="https://play.google.com/store/apps/details?id=com.AhAm.DodgEM" target="_blank">here</a></p>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <p><a href="https://github.com/AaEsS/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is similar to Save My Face. This one has more powerups and the ability to use more than one at once. Instead of a cannon shooting, each bullet grows and pops to three small ones that act like their parent. Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
+        </li>
+        <li>
+          <video width="576px" height="324px" muted autoplay loop>
+            <source src="./videos/gwa_vid.mkv">
+            Game_Without_Art Preview Video
+          </video>
+        </li>
+      </ul>
     </div>
     <script>
       let real_age = document.querySelector(".real_age");
