~ working contact form

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=1024">
+    <meta name="viewport" content="initial-scale=0.0">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
@@ -92,7 +92,7 @@
       </ul>
     </div>
     <h1 id="projects"><span style="font-size: 10px; font-weight: 100;">some </span>Projects</h1>
-    <div class="projects-items">
+    <div align="center" class="projects-items">
       <ul>
         <li>
           <video width="326.4px" height="576px" muted autoplay loop>
@@ -143,7 +143,7 @@
       <span style="margin: 20px;">E-mail: <a href="mailto:ess.ahmed.amine@gmail.com">ess.ahmed.amine@gmail.com</a>/<a href="mailto:aaesselmouni@mun.ca">aaesselmouni@mun.ca</a></span>
       <span style="margin: 20px;">Phone: <a href="tel:+1(709)219-3395">+1(709)219-3395</a></span>
     </div>
-    <form action="" method="post">
+    <form action="https://formsubmit.co/ess.ahmed.amine@gmail.com" method="post">
       <ul>
         <li>
           <label for="name">Name:</label>
