--- a/index.html
+++ b/index.html
@@ -164,7 +164,17 @@
         <li align="center">
           <button type="submit">Send message</button>
         </li>
+        <li>
+          <!-- to avoid spam -->
+          <input type="text" name="_honey" style="display: none;">
+          <!-- disables reCAPTCHA -->
+          <input type="hidden" name="_captcha" value="false">
+          <!-- custom thank you page -->
+          <input type="hidden" name="_next" value="https://aaess.github.io/portfolio_website/thankyou.html">
+        </li>
       </ul>
     </form>
   </body>
 </html>
+
+<!-- used https://formsubmit.co to submit message-->
