--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </li>
         <li>
           <video width="576px" height="324px" muted autoplay loop>
-            <source src="./videos/dotdodge_vid.mkv">
+            <source src="./videos/dotdodge_vid.mp4">
             DotDodge Preview Video
           </video>
         </li>
@@ -132,7 +132,7 @@
         </li>
         <li>
           <video width="576px" height="324px" muted autoplay loop>
-            <source src="./videos/gwa_vid.mkv">
+            <source src="./videos/gwa_vid.mp4">
             Game_Without_Art Preview Video
           </video>
         </li>
