dealt with some mozilla

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav>
-      <button><a href="#me">About me</a></button>
+      <button><a href="#me">About&nbsp;me</a></button>
       <button><a href="#projects">Projects</a></button>
       <button><a href="#contactme">Contact</a></button>
       <button><a href="./docs/trig.pdf">Resume</a></button>
@@ -161,7 +161,7 @@
           <label for="message">Message (to <a href="mailto:ess.ahmed.amine@gmail.com">ess.ahmed.amine@gmail.com</a>):</label>
           <textarea name="their_message" id="message" cols="30" rows="10" placeholder="Hello there!" required></textarea>
         </li>
-        <li align="center">
+        <li style="text-align: center;">
           <button type="submit">Send message</button>
         </li>
       </ul>
