--- a/thankyou.html
+++ b/thankyou.html
@@ -14,7 +14,7 @@
                 <strong style="font-size: 80px;">Thank you!</strong>
             </li>
             <li>
-                <button><a href="./index.html">Go Back</a></button>
+                <button><a href="./index.html">Go&nbsp;Back</a></button>
             </li>
         </ul>
     </div>
