--- a/thankyou.html
+++ b/thankyou.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=0.0">
     <link rel="stylesheet" href="./style.css">
-    <title>aham - Thank you for your message!</title>
+    <link rel="icon" type="image/x-icon" href="./images/title_icon1.ico">
+    <title>ahames - Thank you for your message!</title>
 </head>
 <body>
     <div class="success" align="center">
