resume link fix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button><a href="#me">About&nbsp;me</a></button>
       <button><a href="#projects">Projects</a></button>
       <button><a href="#contactme">Contact</a></button>
-      <button><a href="./docs/current_resume.pdf" target="_blank">Resume</a></button>
+      <button><a href="./docs/curr_resume.pdf" target="_blank">Resume</a></button>
     </nav>
     <h1 id="me">whoami</h1>
     <div class="tree">
