video lazy loading

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     <div align="center" class="projects-items">
       <ul>
         <li>
-          <video width="326.4px" height="576px" muted autoplay loop>
-            <source src="./videos/worldtime_vid.webm">
-            WorldTime Video
+          <video class="lazy" width="326.4px" height="576px" autoplay muted loop playsinline poster="./images/worldtime_poster.jpg">
+            <source data-src="./videos/worldtime_vid.webm" type="video/webm">
+            <source data-src="./videos/worldtime_vid.mp4" type="video/mp4">
           </video>
         </li>
         <li>
@@ -110,17 +110,18 @@
           <p><a href="https://github.com/AaEsS/dtddge-android" target="_blank"><b>DotDodge [C#, Unity]</b></a> is a short game where the player tries to beat it by dodging all homing missiles. The game gets harder the longer you survive. The player wins when the timer hits zero. Game published <a href="https://aaess.itch.io/dotdodge" target="_blank">here</a></p>
         </li>
         <li>
-          <video width="576px" height="324px" muted autoplay loop>
-            <source src="./videos/dotdodge_vid.webm">
-            DotDodge Video
+          <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline
+          poster="./images/dotdodge_poster.jpg">
+            <source data-src="./videos/dotdodge_vid.webm" type="video/webm">
+            <source data-src="./videos/dotdodge_vid.mp4" type="video/mp4">
           </video>
         </li>
       </ul>
       <ul>
         <li>
-          <video width="326.4px" height="576px" muted autoplay loop>
-            <source src="./videos/smf_vid.webm">
-            Save_My_Face Video
+          <video class="lazy" width="326.4px" height="576px" autoplay muted loop playsinline poster="./images/smf_poster.jpg">
+            <source data-src="./videos/smf_vid.webm" type="video/webm">
+            <source data-src="./videos/smf_vid.mp4" type="video/mp4">
           </video>
         </li>
         <li>
@@ -132,9 +133,9 @@
           <p><a href="https://github.com/AaEsS/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is similar to Save My Face. This one has more powerups and the ability to use more than one at once. Instead of a cannon shooting, each ball grows and pops to three small ones that act like their parent. Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
         </li>
         <li>
-          <video width="576px" height="324px" muted autoplay loop>
-            <source src="./videos/gwa_vid.webm">
-            Game_Without_Art Video
+          <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline poster="./images/gwa_poster.jpg">
+            <source data-src="./videos/gwa_vid.webm" type="video/webm">
+            <source data-src="./videos/gwa_vid.mp4" type="video/mp4">
           </video>
         </li>
       </ul>
@@ -176,4 +177,4 @@
   </body>
 </html>
 
-<!-- used https://formsubmit.co to send message -->
+<!-- https://formsubmit.co used to send message -->
