--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </li><!--
             --><li>Solving problems</li><!--
             --><li>
-              Teaching
+              Tutoring
               <ul>
                 <li>Programming</li><!--
                 --><li>Mathematics</li>
