--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
           </video>
         </li>
         <li>
-          <p><a href="https://github.com/AaEsS/MeasureIT_Game_OtherVersion-Pub" target="_blank"><b>Save My Face [C#, Unity]</b></a> is a personal commercial mobile game about my face controlled by the player. The goal is to 'save my face' from the balls shot by a cannon constantly facing the player. There are powerups that can help survive longer. At the end, a score of how many balls survived is shown. A leaderboard and ads are implemented as well. Game published <a href="https://play.google.com/store/apps/details?id=com.AhAm.DodgEM" target="_blank">here</a></p>
+          <p><a href="https://github.com/AaEsS/MeasureIT_Game_OtherVersion-Pub" target="_blank"><b>Save My Face [C#, Unity]</b></a> is a personal commercial mobile game where the goal is to 'save my face' from the balls shot by a cannon constantly facing the player. There are powerups that can help survive longer. In the end, a score of how many balls survived is shown. A leaderboard and ads are implemented as well. Game published <a href="https://play.google.com/store/apps/details?id=com.AhAm.DodgEM" target="_blank">here</a></p>
         </li>
       </ul>
       <ul>
         <li>
-          <p><a href="https://github.com/AaEsS/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is similar to Save My Face. This one has more powerups and the ability to use more than one at once. Instead of a cannon shooting, each ball grows and pops to three small ones that act like their parent. Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
+          <p><a href="https://github.com/AaEsS/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is similar to Save My Face. This one has more powerups and the ability to use more than one at once. Instead of a cannon shooting, each ball grows and pops into three small ones that act as their parent. Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
         </li>
         <li>
           <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline poster="./images/gwa_poster.jpg">
