new resu + email twk

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button><a href="#me">About&nbsp;me</a></button>
       <button><a href="#projects">Projects</a></button>
       <button><a href="#contactme">Contact</a></button>
-      <button><a href="./docs/current_resume.pdf" target="_blank">Resume</a></button>
+      <button><a href="./docs/resume.pdf" target="_blank">Resume</a></button>
     </nav>
     <h1 id="me">whoami</h1>
     <div class="tree">
@@ -142,7 +142,7 @@
     </div>
     <h1 id="contactme">Contact Me</h1>
     <div class="contact_infos">
-      <span style="margin: 20px;">E-mail: <a href="mailto:ess.ahmed.amine@gmail.com">ess.ahmed.amine@gmail.com</a>/<a href="mailto:aaesselmouni@mun.ca">aaesselmouni@mun.ca</a></span>
+      <span style="margin: 20px;">E-mail: <a href="mailto:ess.ahmed.amine@gmail.com">ess.ahmed.amine@gmail.com</a><!--/<a href="mailto:aaesselmouni@mun.ca">aaesselmouni@mun.ca</a>--></span>
       <span style="margin: 20px;">Phone: <a href="tel:+1(709)219-3395">+1(709)219-3395</a></span>
     </div>
     <form action="https://formsubmit.co/ess.ahmed.amine@gmail.com" method="post">
@@ -160,7 +160,7 @@
           <input type="tel" name="their_phone" id="phone" placeholder="(optional)">
         </li>
         <li>
-          <label for="message">Message (to <a href="mailto:ess.ahmed.amine@gmail.com">ess.ahmed.amine@gmail.com</a>):</label>
+          <label for="message">Message<!-- (to <a href="mailto:ess.ahmed.amine@gmail.com">ess.ahmed.amine@gmail.com</a>)-->:</label>
           <textarea name="their_message" id="message" cols="30" rows="10" placeholder="Hello there!" required></textarea>
         </li>
         <li style="text-align: center;">
