--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </video>
         </li>
         <li>
-          <p><a href="https://github.com/AaEsS/MeasureIT_Game_OtherVersion-Pub" target="_blank"><b>Save My Face [C#, Unity]</b></a> is a personal commercial mobile game where the goal is to 'save my face' from the balls shot by a cannon constantly facing the player. There are powerups that can help survive longer. In the end, a score of how many balls survived is shown. A leaderboard and ads are implemented as well. Game published <a href="https://play.google.com/store/apps/details?id=com.AhAm.DodgEM" target="_blank">here</a></p>
+          <p><a href="https://github.com/AaEsS/MeasureIT_Game_OtherVersion-Pub" target="_blank"><b>Save My Face [C#, Unity]</b></a> is a personal commercial mobile game where the goal is to "save my face" from balls shot by a cannon constantly facing the player. There are powerups that can help survive longer. In the end, a score of how many balls survived is shown. A leaderboard and ads are implemented as well. Game published <a href="https://play.google.com/store/apps/details?id=com.AhAm.DodgEM" target="_blank">here</a></p>
         </li>
       </ul>
       <ul>
@@ -161,7 +161,7 @@
         </li>
         <li>
           <label for="message">Message<!-- (to <a href="mailto:ess.ahmed.amine@gmail.com">ess.ahmed.amine@gmail.com</a>)-->:</label>
-          <textarea name="their_message" id="message" cols="30" rows="10" placeholder="Hello there!" required></textarea>
+          <textarea name="their_message" id="message" cols="30" rows="10" placeholder="Hi there!" required></textarea>
         </li>
         <li style="text-align: center;">
           <button type="submit">Send message</button>
