--- a/index.html
+++ b/index.html
@@ -107,30 +107,19 @@
       </ul>
       <ul>
         <li>
-          <p><a href="https://github.com/AaEsS/dtddge-android" target="_blank"><b>DotDodge [C#, Unity]</b></a> is a short game where the player tries to beat it by dodging all homing missiles. The game gets harder the longer you survive. The player wins when the timer hits zero. Game published <a href="https://aaess.itch.io/dotdodge" target="_blank">here</a></p>
-        </li>
-        <li>
           <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline
           poster="./images/dotdodge_poster.jpg">
             <source data-src="./videos/dotdodge_vid.webm" type="video/webm">
             <source data-src="./videos/dotdodge_vid.mp4" type="video/mp4">
           </video>
         </li>
-      </ul>
-      <ul>
         <li>
-          <video class="lazy" width="326.4px" height="576px" autoplay muted loop playsinline poster="./images/smf_poster.jpg">
-            <source data-src="./videos/smf_vid.webm" type="video/webm">
-            <source data-src="./videos/smf_vid.mp4" type="video/mp4">
-          </video>
-        </li>
-        <li>
-          <p><a href="https://github.com/AaEsS/MeasureIT_Game_OtherVersion-Pub" target="_blank"><b>Save My Face [C#, Unity]</b></a> is a personal commercial mobile game where the goal is to "save my face" from balls shot by a cannon constantly facing the player. There are powerups that can help survive longer. In the end, a score of how many balls survived is shown. A leaderboard and ads are implemented as well. Game published <a href="https://play.google.com/store/apps/details?id=com.AhAm.DodgEM" target="_blank">here</a></p>
+          <p><a href="https://github.com/AaEsS/dtddge-android" target="_blank"><b>DotDodge [C#, Unity]</b></a> is a short game where the player tries to beat it by dodging all homing missiles. The game gets harder the longer you survive. The player wins when the timer hits zero. Game published <a href="https://aaess.itch.io/dotdodge" target="_blank">here</a></p>
         </li>
       </ul>
       <ul>
         <li>
-          <p><a href="https://github.com/AaEsS/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> is similar to Save My Face. This one has more powerups and the ability to use more than one at once. Instead of a cannon shooting, each ball grows and pops into three small ones that act as their parent. Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
+          <p><a href="https://github.com/AaEsS/Lockdown" target="_blank"><b>Game Without Art [C#, Unity]</b></a> A game where the player has to dodge balls constantly ricocheting off the walls. Each ball grows and pops into three small ones that act as their parent. There are also powerups to help survive longer. Game published <a href="https://aaess.itch.io/game-without-art" target="_blank">here</a></p>
         </li>
         <li>
           <video class="lazy" width="576px" height="324px" autoplay muted loop playsinline poster="./images/gwa_poster.jpg">
