update thank you page redirect link

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <!-- disables reCAPTCHA -->
       <input type="hidden" name="_captcha" value="false">
       <!-- custom thank you page -->
-      <input type="hidden" name="_next" value="https://aaess.github.io/portfolio_website/thankyou.html">
+      <input type="hidden" name="_next" value="https://ahamsel.github.io/portfolio_website/thankyou.html">
     </form>
   </body>
 </html>
