update to worldtime (name & vid)

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
     <div align="center" class="projects-items">
       <ul>
         <li>
-          <video class="lazy" width="326.4px" height="576px" autoplay muted loop playsinline poster="./images/worldtime_poster.jpg">
-            <source data-src="./videos/worldtime_vid.webm" type="video/webm">
-            <source data-src="./videos/worldtime_vid.mp4" type="video/mp4">
+          <video class="lazy" width="324px" height="673.8px" autoplay muted loop playsinline poster="./images/worldtime_poster.jpg">
+            <source data-src="./videos/worldtimes_vid.webm" type="video/webm">
+            <source data-src="./videos/worldtimes_vid.mp4" type="video/mp4">
           </video>
         </li>
         <li>
-          <p><a href="https://github.com/AaEsS/world_time_fapp" target="_blank"><b>WorldTime [Dart, Flutter]</b></a> is a mobile app that uses web scraping and API calling to retrieve and show time data of regions from <a href="https://worldtimeapi.org" target="_blank">worldtimeapi.org</a>. The app starts by automatically fetching the current time of the user's region. The user can choose from all of the regions presented in a scrollable list, or use an implemented search bar to find their desired one.</p>
+          <p><a href="https://github.com/AaEsS/world_time_fapp" target="_blank"><b>World Times [Dart, Flutter]</b></a> is a mobile app that uses web scraping and API calling to retrieve and show time data of regions from <a href="https://worldtimeapi.org" target="_blank">worldtimeapi.org</a>. The app starts by automatically fetching the current time of the user's region. The user can choose from all of the regions presented in a scrollable listview, or use an implemented search bar to find their desired one.</p>
         </li>
       </ul>
       <ul>
