--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
-    <link rel="icon" type="image/x-icon" href="./images/title_icon1.ico">
+    <link rel="icon" type="image/x-icon" href="./images/title_icon.ico">
     <title>ahames</title>
   </head>
   <body>
@@ -96,13 +96,24 @@
     <div align="center" class="projects-items">
       <ul>
         <li>
-          <video class="lazy" width="324px" height="673.8px" autoplay muted loop playsinline poster="./images/worldtime_poster.jpg">
-            <source data-src="./videos/worldtimes_vid.webm" type="video/webm">
-            <source data-src="./videos/worldtimes_vid.mp4" type="video/mp4">
+          <video class="lazy" width="324px" height="673.8px" autoplay muted loop playsinline poster="./images/auth_db_poster.jpg">
+            <source data-src="./videos/auth_db_vid.webm" type="video/webm">
+            <source data-src="./videos/auth_db_vid.mp4" type="video/mp4">
           </video>
         </li>
         <li>
-          <p><a href="https://github.com/AaEsS/world_time_fapp" target="_blank"><b>World Times [Dart, Flutter]</b></a> is a mobile app that uses web scraping and API calling to retrieve and show time data of regions from <a href="https://worldtimeapi.org" target="_blank">worldtimeapi.org</a>. The app starts by automatically fetching the current time of the user's region. The user can choose from all of the regions presented in a scrollable listview, or use an implemented search bar to find their desired one.</p>
+          <p><a href="https://github.com/ahamSel/flutter_firebase_login_signup" target="_blank"><b>Authentication & Database with Firebase [Dart, Flutter]</b></a> is an app that provides a range of essential functionalities such as Sign-Up/Log-In, Google Sign-In and linking, email confirmation, password reset, and the ability to add or modify personal information. Additionally, the app allows showing real-time users from the database. This functionality can be used to display any type of data or updates in real-time.</p>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <p><a href="https://github.com/AaEsS/world_time_fapp" target="_blank"><b>World Times [Dart, Flutter]</b></a> is an app that uses API calling to retrieve and show time data of regions from <a href="https://worldtimeapi.org" target="_blank">worldtimeapi.org</a>. The app starts by automatically fetching the current time of the user's region. The user can choose from all the regions presented in a scrollable listview, or use an implemented search bar to find their desired one.</p>
+        </li>
+        <li>
+          <video class="lazy" width="324px" height="673.8px" autoplay muted loop playsinline poster="./images/worldtimes_poster.jpg">
+            <source data-src="./videos/worldtimes_vid.webm" type="video/webm">
+            <source data-src="./videos/worldtimes_vid.mp4" type="video/mp4">
+          </video>
         </li>
       </ul>
       <ul>
