--- a/index.html
+++ b/index.html
@@ -141,10 +141,9 @@
       </ul>
     </div>
     <h1 id="contactme">Contact Me</h1>
-    <div class="contact_infos">
-      <span style="margin: 20px;">E-mail: <a href="mailto:ess.ahmed.amine@gmail.com">ess.ahmed.amine@gmail.com</a><!--/<a href="mailto:aaesselmouni@mun.ca">aaesselmouni@mun.ca</a>--></span>
-      <span style="margin: 20px;">Phone: <a href="tel:+1(709)219-3395">+1(709)219-3395</a></span>
-    </div>
+    <!-- <div class="contact_infos">
+      <span style="margin: 20px;">E-mail: <a href="mailto:ess.ahmed.amine@gmail.com">ess.ahmed.amine@gmail.com</a></span>
+    </div> -->
     <form action="https://formsubmit.co/ess.ahmed.amine@gmail.com" method="post">
       <ul>
         <li>
@@ -160,7 +159,7 @@
           <input type="tel" name="their_phone" id="phone" placeholder="(optional)">
         </li>
         <li>
-          <label for="message">Message<!-- (to <a href="mailto:ess.ahmed.amine@gmail.com">ess.ahmed.amine@gmail.com</a>)-->:</label>
+          <label for="message">Message:</label>
           <textarea name="their_message" id="message" cols="30" rows="10" placeholder="Hi there!" required></textarea>
         </li>
         <li style="text-align: center;">
